# aims-backend

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: 개인-프로젝트-이슈-템플릿.md
aws/: urls.py  views.py
common/: admin.py  models.py  serializers.py  urls.py  views.py
common/migrations/: 0001_initial.py  0002_alter_documenttype_name.py
config/: __init__.py  settings.py  urls.py
documents/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
documents/migrations/: 0001_initial.py  0002_alter_document_table.py  0002_remove_document_fails_documentpassfail_document.py  0003_alter_documentpassfail_failed_condition.py  0004_alter_document_document_type_alter_document_file_and_more.py
essays/: admin.py  models.py  serializers.py  urls.py  views.py
essays/migrations/: 0001_initial.py  0002_alter_essay_evaluation_remove_essaycriteria_content_and_more.py  0002_alter_essay_table_and_more.py  0003_alter_essay_student_alter_essayscore_criteria_item_and_more.py  0003_alter_essayevaluationscore_essay.py  0004_alter_essay_document_type.py
prompts/: essay_prompt.txt  essay_prompt2.txt  question.txt  refine_prompt.txt  summarization.txt
student_records/: admin.py  models.py  serializers.py  urls.py  views.py
student_records/migrations/: 0001_initial.py  0002_alter_studentrecord_student.py  (+9 more)
students/: admin.py  models.py  serializers.py  urls.py  views.py
users/: serializers.py  urls.py  views.py
utils/: document.py  essay.py  essay_setting.sql  student_record.py  student_record_setting.sql  upstage.py
(+8 files in other folders)
